--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -14,9 +14,10 @@
 
 .nav-menu {
     background-color: #060b26;
-    width: 220px;
+    margin-left: -10px;
+    width: 240px;
     height: 100vh;
-    font-size: 50px;
+    font-size: 100px;
     justify-content: flex-start;
     position: fixed;
     top: 0;
