--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@ body {
 
 }
 
-.home, .upcoming, .about, .recommend1, .recommend2, .recommend3 {
+.home, .popular, .about, .recommend1, .recommend2, .recommend3 {
   display: flex;
   height: 90vh;
   align-items: center;
@@ -24,15 +24,11 @@ body {
   font-size: 3rem;
 }
 
-.container {
-  width: 100%;
-  margin: 1rem auto;
-}
-
 .grid {
+  width: 100%;
   display: grid;
-  margin-left: 20px;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   grid-gap: 0.6rem;
   justify-content: center;
 }
+
