--- a/src/App.css
+++ b/src/App.css
@@ -13,10 +13,14 @@ body {
   background-size: cover;
   background-position: center;
   background-position: fixed;
-
 }
 
-.home, .popular, .about, .recommend1, .recommend2, .recommend3 {
+.home,
+.popular,
+.about,
+.recommend1,
+.recommend2,
+.recommend3 {
   display: flex;
   height: 90vh;
   align-items: center;
@@ -25,10 +29,9 @@ body {
 }
 
 .grid {
-  width: 100%;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: 20% 20% 20% 20%;
+  grid-template-rows: auto;
   grid-gap: 0.6rem;
-  justify-content: center;
+  justify-content: right;
 }
-
