--- a/src/components/Carousel.css
+++ b/src/components/Carousel.css
@@ -1,8 +1,12 @@
 .box {
-    width: 100%;
+    display: grid;
+    grid-template-columns: 82%;
+    grid-template-rows: 60%;
+    /* width: 80%; */
+    justify-content: right;
 }
 
 img {
-    height: 400px;
+    height: 240px;
     margin: 1rem auto;
 }
