--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -72,3 +72,10 @@
 span {
     margin-left: 16px;
 } 
+
+#logo {
+    width: 120px;
+    height: 120px;
+    background-color:white;
+    padding: 10px;
+}
