--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,7 @@
 }
 
 /* ------------ Start Here ------------ */
-* {
+/* * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -75,4 +75,4 @@ body {
   grid-template-rows: auto;
   grid-gap: 0.6rem;
   justify-content: right;
-}
+} */
