--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,12 @@ body {
   background-position: fixed;
 }
 
+.container{
+  width: 100%;
+  margin:1em auto;
+  background-color: darkslategray;
+}
+
 .home,
 .popular,
 .about,
