--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
-
 @import url('http://fonts.googleapis.com/css2?family=Lato&display=swap');
+
 .App {
   text-align: center;
 }
@@ -41,7 +41,7 @@
 }
 
 /* ------------ Start Here ------------ */
-/* * {
+ * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -81,4 +81,4 @@ body {
   grid-template-rows: auto;
   grid-gap: 0.6rem;
   justify-content: right;
-} */
+} 
