add theme button

--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,17 @@
 }
 
 /* ------------ Start Here ------------ */
+
+.dark {
+  background-color: #333;
+  color: #fff;
+  }
+  .light {
+  background-color: #fff;
+  color: #333;
+  }
+
+
  * {
   box-sizing: border-box;
   margin: 0;
