--- a/src/App.css
+++ b/src/App.css
@@ -1,46 +1,4 @@
 @import url('http://fonts.googleapis.com/css2?family=Lato&display=swap');
-
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-/* ------------ Start Here ------------ */
 * {
   box-sizing: border-box;
   margin: 0;
@@ -54,24 +12,37 @@ body {
   background-size: cover;
   background-position: center;
   background-position: fixed;
+  /* margin: 20px;
+  padding: 20px;
+  text-decoration: none;
+  list-style-type: none;
+  outline: none; */
 }
 
 .home,
 .popular,
 .about,
-.recommend1,
-.recommend2,
-.recommend3 {
+.movie1,
+.movie2,
+.movie3 {
   display: flex;
   height: 90vh;
   align-items: center;
   justify-content: center;
   font-size: 3rem;
+  border: 1px solid black;
+  margin-left: 5%;
+
+}
+
+.container {
+  width: 100%;
+  margin: 1rem auto;
 }
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, 20%);
+  grid-template-columns: repeat(auto-fill, 22%);
   grid-template-rows: auto;
   grid-gap: 0.6rem;
   justify-content: right;
