--- a/src/App.css
+++ b/src/App.css
@@ -68,7 +68,7 @@ body {
 .movie2,
 .movie3 {
   display: flex;
-  height: 90vh;
+  /* height: 50vh; */
   align-items: center;
   justify-content: center;
   font-size: 3rem;
