--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -21,11 +21,11 @@
     justify-content: flex-start;
     align-items: center;
     list-style: none;
-    height: 7vh;
+    height: 6vh;
     border: 1px solid beige;
-    border-radius: 2vh;
+    border-radius: 1vw;
     width: 80%;
-    margin: 5% 0;
+    margin-bottom: 5%;
 }
 
 .nav-text a {
@@ -34,7 +34,7 @@
     height: 100%; 
     display: flex;
     align-items: center;
-    padding-left: 1rem;
+    padding-left: 1vw;
 
 }
 
@@ -42,7 +42,7 @@
     background-color: #1a83ff;
     color: black;
     width: 100%;
-    border-radius: 2vh;
+    border-radius: 1vw;
 }
 
 .nav-menu-items {
@@ -58,5 +58,5 @@ span {
     height: 80%;
     background-color:white;
     padding: 6%;  
-    margin: -20% 0 10% 0;
+    margin-bottom: 20%;
 }
