--- a/src/App.css
+++ b/src/App.css
@@ -68,12 +68,13 @@ body {
 .movie2,
 .movie3 {
   display: flex;
-  /* height: 50vh; */
   align-items: center;
   justify-content: center;
-  font-size: 3rem;
+  font-size: 2rem;
   border: 1px solid black;
+  height: 50vh;
   margin-left: 5%;
+  margin-bottom: 10%;
 
 }
 
