--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -5,58 +5,28 @@
     align-items: center;
 }
 
-.menu-bars {
-    display: absolute;
-}
-
 .nav-menu {
     font-size: 1.2vw;
     width: 20%;
-    height: 90%;
+    height: 100%;
     position: flex;  
 }
 
 .nav-text {
-    display: flex;
-    justify-content: flex-start;
     align-items: center;
     list-style: none;
-    height: 6vh;
+    color: beige;
+    font-size: 1.5vw;
     border: 1px solid beige;
     border-radius: 1vw;
-    width: 80%;
+    width: 12vw;
     margin-bottom: 5%;
 }
 
-.nav-text a {
-    text-decoration: none;
-    color: white;
-    height: 100%; 
-    display: flex;
-    align-items: center;
-    padding-left: 1vw;
-
-}
-
-.nav-text a:hover {
-    background-color: #1a83ff;
-    color: black;
-    width: 100%;
-    border-radius: 1vw;
-}
-
-.nav-menu-items {
-    width: 100%;
-}
-
-span {
-    margin-left: 6px;
-} 
-
 #logo {
-    width: 80%;
-    height: 80%;
-    background-color:white;
+    width: 90%;
+    height: 90%;
+    background-color:beige;
     padding: 6%;  
     margin-bottom: 20%;
 }
