--- a/src/App.css
+++ b/src/App.css
@@ -63,10 +63,7 @@ body {
 
 .home,
 .popular,
-.about,
-.movie1,
-.movie2,
-.movie3 {
+.about {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -75,7 +72,19 @@ body {
   height: 50vh;
   margin-left: 5%;
   margin-bottom: 10%;
+}
 
+.movie1,
+.movie2,
+.movie3 {
+  display: flex;
+  /* align-items: center; */
+  /* justify-content: center; */
+  font-size: 20px;
+  border: 1px solid black;
+  height: 50vh;
+  margin-left: 5%;
+  margin-bottom: 10%;
 }
 
 .grid {
