--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,14 @@ body {
   outline: none; */
 }
 
+.main {
+  display: flex;
+  margin-top: -45%;
+  align-items: center; 
+  justify-content: center;
+  /* height: 80%; */
+}
+
 .home,
 .popular,
 .about {
@@ -78,8 +86,6 @@ body {
 .movie2,
 .movie3 {
   display: flex;
-  /* align-items: center; */
-  /* justify-content: center; */
   font-size: 20px;
   border: 1px solid black;
   height: 50vh;
