--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
-
 @import url('http://fonts.googleapis.com/css2?family=Lato&display=swap');
+
 .App {
   text-align: center;
 }
@@ -54,24 +54,32 @@ body {
   background-size: cover;
   background-position: center;
   background-position: fixed;
+  /* margin: 20px;
+  padding: 20px;
+  text-decoration: none;
+  list-style-type: none;
+  outline: none; */
 }
 
 .home,
 .popular,
 .about,
-.recommend1,
-.recommend2,
-.recommend3 {
+.movie1,
+.movie2,
+.movie3 {
   display: flex;
   height: 90vh;
   align-items: center;
   justify-content: center;
   font-size: 3rem;
+  border: 1px solid black;
+  margin-left: 5%;
+
 }
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, 20%);
+  grid-template-columns: repeat(auto-fill, 22%);
   grid-template-rows: auto;
   grid-gap: 0.6rem;
   justify-content: right;
