--- a/src/App.css
+++ b/src/App.css
@@ -63,23 +63,24 @@ body {
 
 .main {
   display: flex;
-  margin-top: -45%;
+  margin-top: -48%;
   align-items: center; 
   justify-content: center;
-  /* height: 80%; */
 }
 
 .home,
 .popular,
-.about {
+.about,
+.error {
+  /* border: 1px solid black; */
   display: flex;
   align-items: center;
   justify-content: center;
   font-size: 2rem;
-  border: 1px solid black;
   height: 50vh;
   margin-left: 5%;
   margin-bottom: 10%;
+  
 }
 
 .movie1,
