--- a/src/App.css
+++ b/src/App.css
@@ -83,7 +83,7 @@ body {
   
 }
 
-.movie1,
+/* .movie1,
 .movie2,
 .movie3 {
   display: flex;
@@ -92,7 +92,7 @@ body {
   height: 50vh;
   margin-left: 5%;
   margin-bottom: 10%;
-}
+} */
 
 .grid {
   display: grid;
