--- a/src/App.css
+++ b/src/App.css
@@ -98,5 +98,5 @@ body {
   grid-template-columns: repeat(auto-fill, 22%);
   grid-template-rows: auto;
   grid-gap: 0.6rem;
-  justify-content: right;
+  justify-content: center;
 }
