--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,7 @@
 }
 
 body {
-  background-image: url('/public/bgimg.jpg');
+  background-image: url('../public/images/bgimg.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
