--- a/src/App.css
+++ b/src/App.css
@@ -63,7 +63,7 @@ body {
 
 .main {
   display: flex;
-  margin-top: -48%;
+  /* margin-top: -48%; */
   align-items: center; 
   justify-content: center;
 }
@@ -80,6 +80,7 @@ body {
   height: 50vh;
   margin-left: 5%;
   margin-bottom: 10%;
+  border: 1px solid black;
   
 }
 
