--- a/src/App.css
+++ b/src/App.css
@@ -43,14 +43,27 @@
 /* ------------ Start Here ------------ */
 
 .dark {
-  background-color: #333;
+  /* background-color: #333; */
+  background-image: url('/public/images/bgimg-dark.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-position: fixed;
   color: #fff;
   }
   .light {
-  background-color: #fff;
+  /* background-color: #fff; */
+  background-image: url('/public/images/bgimg.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-position: fixed;
   color: #333;
   }
 
+Button {
+  box-shadow: 2px 2px 5px #ccc;
+}
 
 /* * {
   box-sizing: border-box;
@@ -80,7 +93,6 @@ body {
 
 .main {
   display: flex;
-  /* margin-top: -48%; */
   align-items: center; 
   justify-content: center;
 }
@@ -100,17 +112,6 @@ body {
   border: 1px solid black;
   
 }
-
-/* .movie1,
-.movie2,
-.movie3 {
-  display: flex;
-  font-size: 20px;
-  border: 1px solid black;
-  height: 50vh;
-  margin-left: 5%;
-  margin-bottom: 10%;
-} */
 
 .grid {
   display: grid;
