add user authenticated at add review button

--- a/src/App.css
+++ b/src/App.css
@@ -43,8 +43,8 @@
 /* ------------ Start Here ------------ */
 
 .dark {
-  /* background-color: #333; */
-  background-image: url('/public/images/bgimg-dark.jpg');
+  background-color: #333;
+  /* background-image: url('/public/images/bgimg-dark.jpg'); */
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -53,8 +53,8 @@
 }
 
 .light {
-  /* background-color: #fff; */
-  background-image: url('/public/images/bgimg.jpg');
+  background-color: #fff;
+  /* background-image: url('/public/images/bgimg.jpg'); */
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
