--- a/src/App.css
+++ b/src/App.css
@@ -110,7 +110,7 @@ body {
   height: 50vh;
   margin-left: 5%;
   margin-bottom: 10%;
-  border: 1px solid black;
+  /* border: 1px solid black; */
 
 }
 
